--- a/k3s/plex-stack/plex-claim2-persistentvolumeclaim.yaml
+++ b/k3s/plex-stack/plex-claim2-persistentvolumeclaim.yaml
@@ -1,6 +1,7 @@
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
+  namespace: test-dev
   creationTimestamp: null
   labels:
     io.kompose.service: plex-claim2
