--- a/docker/homepage/docker-compose.yaml
+++ b/docker/homepage/docker-compose.yaml
@@ -12,5 +12,5 @@ services:
       - PGID=1000
     volumes:
       - ./config:/app/config
-      - /var/run/docker.sock:/var/run/docker.sock:ro
+      #- /var/run/docker.sock:/var/run/docker.sock:ro
     restart: unless-stopped
