--- a/docker/warden-stack/docker-compose.yaml
+++ b/docker/warden-stack/docker-compose.yaml
@@ -2,7 +2,7 @@ version: '3.8'
 services:
   warden:
     container_name: vaultwarden
-    image: vaultwarden/server:latest
+    image: docker.io/vaultwarden/server:latest
     ports:
       - 8089:80
     env_file:
