practiced with creating deployment yamls with dry-run=create > <filename.yaml>/ learned to use commands & args in deployment yaml

--- a/k3s/plex-stack/plex-deployment.yaml
+++ b/k3s/plex-stack/plex-deployment.yaml
@@ -12,7 +12,10 @@ spec:
     matchLabels:
       env: plex
   strategy:
-    type: Recreate
+    type: RollingUpdate
+    rollingUpdate:
+      maxUnavailable: 1 
+      maxSurge: 1 
   template:
     metadata:
       labels:
