--- a/k3s/test-dev/red-hat.yaml
+++ b/k3s/test-dev/red-hat.yaml
@@ -15,7 +15,9 @@ spec:
       labels:
         app: redhat
     spec:
+      serviceAccountName: app-sa
       containers:
         - name: redhat
-          image: quay.io/centos/centos:stream8
-
+          image: redhat/ubi8
+          command: ["/bin/bash", "-c"]
+          args: ["sleep infinity"]
