--- a/k3s/warden-stack/warden-deployment.yaml
+++ b/k3s/warden-stack/warden-deployment.yaml
@@ -10,7 +10,10 @@ spec:
     matchLabels:
       app: warden
   strategy:
-    type: Recreate
+    type: RollingUpdate
+    rollingUpdate:
+      maxUnavailable: 1
+      maxSurge: 1
   template:
     metadata:
       labels:
