--- a/k3s/homepage/homepage-service.yaml
+++ b/k3s/homepage/homepage-service.yaml
@@ -1,13 +1,8 @@
 apiVersion: v1
 kind: Service
 metadata:
-  annotations:
-    kompose.cmd: /snap/kompose/19/kompose-linux-amd64 convert
-    kompose.version: 1.21.0 (992df58d8)
-  creationTimestamp: null
-  labels:
-    io.kompose.service: homepage
-  name: homepage
+  name: home-svc
+  namespace: test-dev 
 spec:
   type: NodePort
   ports:
@@ -16,6 +11,4 @@ spec:
     targetPort: 3000
     nodePort: 30900
   selector:
-    io.kompose.service: homepage
-status:
-  loadBalancer: {}
+    app: homepage
