--- a/k3s/skool-course/frontend.yaml
+++ b/k3s/skool-course/frontend.yaml
@@ -2,23 +2,22 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   labels:
-    app: httpd
-  name: httpd
-  namespace: test-dev
+    app: frontend
+  name: frontend
 spec:
   replicas: 10
   selector:
     matchLabels:
-      app: httpd
+      app: frontend
   template:
     metadata:
       labels:
-        app: httpd
+        app: frontend
     spec:
       containers:
         - image: httpd:bookworm
-          name: httpd
-  strategy:
+          name: frontend
+  strategy:       
     type: RollingUpdate
     rollingUpdate: 
       maxUnavailable: 1
