--- a/k3s/test-dev/homepage/homepage-claim1.yaml
+++ b/k3s/test-dev/homepage/homepage-claim1.yaml
@@ -1,13 +1,11 @@
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
+  name: homepage-storage1
   namespace: test-dev 
-  labels:
-    app: homepage 
-  name: homepage-claim1
 spec:
   accessModes:
-  - ReadWriteOnce
+    - ReadWriteOnce
   resources:
     requests:
-      storage: 100Mi
+      storage: 10Gi
