successfully added pvc claims to my pgadmin and postgresgit add .

--- a/k3s/test-dev/adminer/adminer-deploy-run.yaml
+++ b/k3s/test-dev/adminer/adminer-deploy-run.yaml
@@ -22,5 +22,10 @@ spec:
       containers:
       - image: adminer:latest
         name: adminer
-        resources: {}
-status: {}
+        volumeMounts:
+            - mountPath: /admin-ephemeral
+              name: ephemeral-cache
+      volumes:
+        - name: ephemeral-cache
+          emptyDir:
+            sizeLimit: 500Mi
