--- a/k3s/homepage/homepage-deployment.yaml
+++ b/k3s/homepage/homepage-deployment.yaml
@@ -1,59 +1,54 @@
 apiVersion: apps/v1
-kind: Deployment
+kind: Deployment 
 metadata:
-  annotations:
-    kompose.cmd: /snap/kompose/19/kompose-linux-amd64 convert
-    kompose.version: 1.21.0 (992df58d8)
-  creationTimestamp: null
+  name: homepage-deployment 
+  namespace: test-dev 
   labels:
-    io.kompose.service: homepage
-  name: homepage
-  namespace: test-dev
+    app: homepage 
 spec:
-  replicas: 3
+  replicas: 1
   selector:
     matchLabels:
-      io.kompose.service: homepage
-  strategy:
-    type: Recreate
+      app: homepage 
   template:
     metadata:
-      annotations:
-        kompose.cmd: /snap/kompose/19/kompose-linux-amd64 convert
-        kompose.version: 1.21.0 (992df58d8)
-      creationTimestamp: null
+      name: homepage-pod 
       labels:
-        io.kompose.service: homepage
+        app: homepage
     spec:
       serviceAccountName: app-sa
       containers:
       - env:
         - name: HOMEPAGE_ALLOWED_HOSTS
-          value: localhost,127.0.0.1,100.69.27.29:30900,heroaero.dev,www.heroaero.dev
+          value: heroaero.dev,www.heroaero.dev
         - name: PGID
           value: "1000"
         - name: PUID
           value: "1000"
-        image: ghcr.io/gethomepage/homepage:latest
+        image: ghcr.io/gethomepage/homepage:v1.3.2
         imagePullPolicy: ""
         name: homepage
+        resources:
+          requests:
+            memory: "64Mi"
+            cpu: "50m"
+          limits:
+            memory: "128Mi"
+            cpu: "250m"
         ports:
         - containerPort: 3000
-        resources: {}
         volumeMounts:
-        - mountPath: /app/config
-          name: homepage-claim0
-        - mountPath: /var/run/docker.sock
-          name: homepage-claim1
-          readOnly: true
+          - mountPath: /app/config 
+            name: homepage-storage0
+          - mountPath: /var/run/docker.sock
+            name: homepage-storage1
+            readOnly: true
       restartPolicy: Always
-      serviceAccountName: ""
       volumes:
-      - name: homepage-claim0
-        persistentVolumeClaim:
-          claimName: homepage-claim0
-      - name: homepage-claim1
-        persistentVolumeClaim:
-          claimName: homepage-claim1
-          readOnly: true
-status: {}
+        - name: homepage-storage0
+          persistentVolumeClaim:
+            claimName: homepage-storage0
+        - name: homepage-storage1
+          persistentVolumeClaim:
+            claimName: homepage-storage1
+            readOnly: true
