--- a/apps/base/linkding/deployment.yaml
+++ b/apps/base/linkding/deployment.yaml
@@ -4,7 +4,7 @@ metadata:
   name: linkding
   namespace: linkding
 spec:
-  replicas: 1
+  replicas: 2
   selector:
     matchLabels:
       app: linkding
@@ -18,3 +18,10 @@ spec:
           image: sissbruecker/linkding:1.31.0
           ports:
             - containerPort: 9090
+          volumeMounts:
+            - pathMount: /etc/linkding/data
+              name: linkding-volume 
+      volumes:
+        - name: linkding-volume
+          persistedVolumeClaim:
+            claimName: linkding-volume
