--- a/apps/base/linkding/deployment.yaml
+++ b/apps/base/linkding/deployment.yaml
@@ -19,7 +19,7 @@ spec:
           ports:
             - containerPort: 9090
           volumeMounts:
-            - pathMount: /etc/linkding/data
+            - mounthPath: /etc/linkding/data
               name: linkding-volume 
       volumes:
         - name: linkding-volume
