--- a/apps/base/pgadmin/deployment.yaml
+++ b/apps/base/pgadmin/deployment.yaml
@@ -15,7 +15,7 @@ spec:
     spec:
       containers:
         - name: pgadmin
-          image: dpage/pgadmin:9.4 
+          image: dpage/pgadmin4:9.4 
           env:
             - name: PGADMIN_DEFAULT_EMAIL
               valueFrom:
