--- a/apps/base/pgadmin/pvc.yaml
+++ b/apps/base/pgadmin/pvc.yaml
@@ -5,7 +5,7 @@ metadata:
   namespace: test-dev 
 spec:
   accessModes:
-    ReadWriteOnce
+    - ReadWriteOnce
   resources:
     requests:
       storage: 1Gi
