--- a/apps/base/linkding/deployment.yaml
+++ b/apps/base/linkding/deployment.yaml
@@ -13,9 +13,15 @@ spec:
       labels:
         app: linkding
     spec:
+      securityContext:
+        fsGroup: 33 # www-data group ID
+        runAsUser: 33 # www-data user ID
+        runAsGroup: 33 # www-data group ID
       containers:
         - name: linkding
           image: sissbruecker/linkding:1.31.0
+          securityContext:
+            allowPrivilegeEscalation: false
           ports:
             - containerPort: 9090
           volumeMounts:
