--- a/apps/base/cloudflared/deployment.yaml
+++ b/apps/base/cloudflared/deployment.yaml
@@ -50,23 +50,22 @@ spec:
             periodSeconds: 10
           volumeMounts:
             - name: config 
-              mountPath: /etc/cloudflared
+              mountPath: /etc/cloudflared/config.yaml
               readOnly: true 
       volumes:
         - name: config
           configMap:
             name: cloudflared-config 
 
-  ---
-
-  apiVersion: v1
-  kind: ConfigMap 
-  metadata:
-    name: cloudflared-config
-    namespace: cloudflared
-  data:
-    config.yaml: |
-      ingress:
-        - hostname: link.heroaero.dev 
-          service: http://10.43.85.255:9090
-        - service: http_status:404
+--- 
+apiVersion: v1
+kind: ConfigMap 
+metadata:
+  name: cloudflared-config
+  namespace: cloudflared
+data:
+  config.yaml: |
+    ingress:
+      - hostname: link.heroaero.dev 
+        service: http://10.43.85.255:9090
+      - service: http_status:404
