--- a/apps/base/cloudflared/deployment.yaml
+++ b/apps/base/cloudflared/deployment.yaml
@@ -37,7 +37,7 @@ spec:
             - --metrics
             - 0.0.0.0:2000
             - --config 
-            - /etc/cloudflared/config.yaml
+            - /etc/cloudflared/config/config.yaml
             - run
           livenessProbe:
             httpGet: 
@@ -50,7 +50,7 @@ spec:
             periodSeconds: 10
           volumeMounts:
             - name: config 
-              mountPath: /etc/cloudflared/config.yaml
+              mountPath: /etc/cloudflared/config 
               readOnly: true 
       volumes:
         - name: config
