specified namespace for test-secet.yaml

--- a/apps/staging/linkding/test-secret.yaml
+++ b/apps/staging/linkding/test-secret.yaml
@@ -6,6 +6,7 @@ kind: Secret
 metadata:
     creationTimestamp: null
     name: test-secret
+    namespace: linkding
 sops:
     age:
         - recipient: age19px9030npyfmvxu2580c6n2t3lfvs8c0yyx96qd9vz3pkglx5s2qdqgpsu
