--- a/apps/base/linkding/deployment.yaml
+++ b/apps/base/linkding/deployment.yaml
@@ -27,6 +27,17 @@ spec:
           volumeMounts:
             - mountPath: /etc/linkding/data
               name: linkding-volume 
+          env:
+            - name: LD_SUPERUSER_NAME
+              valueFrom:
+                secretKeyRef:
+                  name: linkding 
+                  key: LD_SUPERUSER_NAME
+            - name: LD_SUPERUSER_PASSWORD
+              valueFrom:
+                secretKeyRef:
+                  name: linkding
+                  key: LD_SUPERUSER_PASSWORD
       volumes:
         - name: linkding-volume
           persistentVolumeClaim:
