adding old homepage svc to cloudflared

--- a/apps/base/cloudflared/deployment.yaml
+++ b/apps/base/cloudflared/deployment.yaml
@@ -68,4 +68,6 @@ data:
     ingress:
       - hostname: link.heroaero.dev 
         service: http://linkding:9090
+      - hostname: heroaero.dev 
+        service: http://homepage-svc:80
       - service: http_status:404
