--- a/apps/base/cloudflared/deployment.yaml
+++ b/apps/base/cloudflared/deployment.yaml
@@ -71,5 +71,5 @@ data:
       - hostname: heroaero.dev 
         service: http://homepage-svc:80
       - hostname: pgadmin.heroaero.dev 
-        service: http://pgadmin:80
+        service: http://pgadmin
       - service: http_status:404
