--- a/apps/base/cloudflared/deployment.yaml
+++ b/apps/base/cloudflared/deployment.yaml
@@ -69,7 +69,7 @@ data:
       - hostname: link.heroaero.dev 
         service: http://linkding:9090
       - hostname: heroaero.dev 
-        service: http://homepage-svc:80
+        service: http://homepage-svc
       - hostname: pgadmin.heroaero.dev
-        service: http://pgadmin:80
+        service: http://pgadmin
       - service: http_status:404
