typo  'SecretRef' correction 'secretRef'

--- a/apps/base/linkding/deployment.yaml
+++ b/apps/base/linkding/deployment.yaml
@@ -28,7 +28,7 @@ spec:
             - mountPath: /etc/linkding/data
               name: linkding-volume 
           envFrom:
-            - SecretRef:
+            - secretRef:
                 name: linkding
       volumes:
         - name: linkding-volume
