--- a/apps/base/cloudflared/deployment.yaml
+++ b/apps/base/cloudflared/deployment.yaml
@@ -69,7 +69,7 @@ data:
   config.yaml: |
     ingress:
       - hostname: link.heroaero.dev 
-        service: http://linkding:9090
+        service: http://linkding.linkding.svc.cluster.local:9090
       - hostname: heroaero.dev 
         service: http://homepage-svc.test-dev.svc.cluster.local
       - hostname: pgadmin.heroaero.dev
