--- a/monitoring/controllers/base/kube-prometheus-stack/release.yaml
+++ b/monitoring/controllers/base/kube-prometheus-stack/release.yaml
@@ -1,5 +1,5 @@
-apiVersion: helm.toolkit.fluxcd.io/v1
-kind: HelmRepository
+apiVersion: helm.toolkit.fluxcd.io/v2
+kind: HelmRelease
 metadata:
   name: kube-prometheus-stack
   namespace: monitoring
