--- a/apps/base/cloudflared/deployment.yaml
+++ b/apps/base/cloudflared/deployment.yaml
@@ -38,7 +38,7 @@ spec:
             - --metrics
             - 0.0.0.0:2000
             - --config 
-            - /etc/cloudflared/config/config.yaml
+            # - /etc/cloudflared/config/config.yaml
             - run
           livenessProbe:
             httpGet: 
