forgot to comment out --config as well

--- a/apps/base/cloudflared/deployment.yaml
+++ b/apps/base/cloudflared/deployment.yaml
@@ -37,7 +37,7 @@ spec:
             - debug
             - --metrics
             - 0.0.0.0:2000
-            - --config 
+            # - --config 
             # - /etc/cloudflared/config/config.yaml
             - run
           livenessProbe:
