nvim not saving the correct file

--- a/apps/base/cloudflared/deployment.yaml
+++ b/apps/base/cloudflared/deployment.yaml
@@ -49,7 +49,7 @@ spec:
             periodSeconds: 10
           volumeMounts:
             - name: config
-              Mountpath: /etc/cloudflared/config
+              mountPath: /etc/cloudflared/config
               readOnly: true 
       volumes:
         - name: config
