adding ClusterSecretStore/aws credentials through flux

--- a/apps/staging/cloudflared/cloudflared-eso.yaml
+++ b/apps/staging/cloudflared/cloudflared-eso.yaml
@@ -7,7 +7,7 @@ spec:
   refreshInterval: 1m 
   secretStoreRef:
     name: secret-store
-    kind: SecretStore 
+    kind: ClusterSecretStore 
   target:
     name: kube-secret 
     creationPolicy: Owner
