--- a/secrets/base/cluster-secret-store/cluster-secret-store.yaml
+++ b/secrets/base/cluster-secret-store/cluster-secret-store.yaml
@@ -1,9 +1,9 @@
 apiVersion: external-secrets.io/v1
-kind: SecretStore
+kind: ClusterSecretStore
 metadata:
-  name: secret-store
-  namespace: cloudflared
-spec:
+  name: cluster-secret-store
+  namespace: external-secrets
+spec: 
   provider:
     aws:
       service: SecretsManager
@@ -11,8 +11,8 @@ spec:
       auth:
         secretRef:
           accessKeyIDSecretRef:
-            name: awssm-secret 
+            name: aws-secret 
             key: access-key 
           secretAccessKeySecretRef:
-            name: awssm-secret
+            name: aws-secret
             key: secret-access-key 
