--- a/clusters/staging/secrets.yaml
+++ b/clusters/staging/secrets.yaml
@@ -14,4 +14,7 @@ spec:
     name: flux-system 
   path: ./secrets/staging
   prune: true
-
+  decryption:
+    provider: sops
+    secretRef:
+      name: sops-age
