--- a/clusters/staging/secrets.yaml
+++ b/clusters/staging/secrets.yaml
@@ -12,7 +12,7 @@ spec:
   sourceRef:
     kind: GitRepository
     name: flux-system 
-  path: ./secrets/staging
+  path: ./secrets/base
   prune: true
   decryption:
     provider: sops
