changing name of external secret

--- a/apps/base/cloudflared/external-secret.yaml
+++ b/apps/base/cloudflared/external-secret.yaml
@@ -1,7 +1,7 @@
 apiVersion: external-secrets.io/v1
 kind: ExternalSecret 
 metadata:
-  name: cloudflared-external
+  name: cloudflared-eso
   namespace: cloudflared 
 spec:
   refreshInterval: 1m 
