aws-secret is in namespace aws

--- a/secrets/base/cluster-secret-store/cluster-secret-store.yaml
+++ b/secrets/base/cluster-secret-store/cluster-secret-store.yaml
@@ -12,8 +12,8 @@ spec:
           accessKeyIDSecretRef:
             name: aws-secret 
             key: access-key 
-            namespace: external-secrets
+            namespace: aws
           secretAccessKeySecretRef:
             name: aws-secret
             key: secret-access-key 
-            namespace: external-secrets
+            namespace: aws
