feat(ExternalSecret): add ExternalSecret for Pgadmin/Cloudflared via GitOps-based install

--- a/apps/base/cloudflared/deployment.yaml
+++ b/apps/base/cloudflared/deployment.yaml
@@ -25,7 +25,7 @@ spec:
           image: cloudflare/cloudflared:latest
           envFrom:
             - secretRef:
-                name: kube-secret 
+                name: cloudflared-secret 
           command:
             # configures tunnel run paramaters
             - cloudflared
