--- a/apps/base/pgadmin/external-secret.yaml
+++ b/apps/base/pgadmin/external-secret.yaml
@@ -1,16 +1,16 @@
 apiVersion: external-secrets.io/v1
 kind: ExternalSecret 
 metadata:
-  name: cloudflared-eso
-  namespace: cloudflared   
+  name: pgadmin-eso
+  namespace: pgadmin 
 spec:
   refreshInterval: 1m 
   secretStoreRef:
     name: cluster-secret-store
     kind: ClusterSecretStore 
   target:
-    name: cloudflared-secret 
+    name: pgadmin-secret 
     creationPolicy: Owner
   dataFrom:
     - extract:
-        key: cloudflared-secret 
+        key: pgadmin-secret 
