--- a/apps/base/pgadmin/service.yaml
+++ b/apps/base/pgadmin/service.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: Service 
 metadata:
   name: pgadmin
-  namespace: test-dev 
+  namespace: pgadmin
 spec:
   type: ClusterIP
   selector:
