--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -23,11 +23,11 @@ jobs:
 
       - name: Install tools
         run: |
-          go install github.com/mikefarah/yq/v4@latest
-          go install github.com/yannh/kubeconform/cmd/kubeconform@v0.6.4
-          go install github.com/fluxcd/kustomize-controller/cmd/kustomize@v0.35.0
-          go install go.mozilla.org/sops/v3/cmd/sops@v3.8.1
-          echo "$HOME/go/bin" >> $GITHUB_PATH
+          go install github.com/mikefarah/yq/v4@v4.40.5
+              go install github.com/yannh/kubeconform/cmd/kubeconform@v0.6.4
+              go install go.mozilla.org/sops/v3/cmd/sops@v3.8.1
+              curl -s https://raw.githubusercontent.com/kubernetes-sigs/kustomize/master/hack/install_kustomize.sh | bash
+              echo "$PWD" >> $GITHUB_PATH
       - name: Lint Kustomize bases
         run: |
           for dir in clusters/*; do
