--- a/infrastructure/base/cloudflared/deployment.yaml
+++ b/infrastructure/base/cloudflared/deployment.yaml
@@ -68,7 +68,7 @@ data:
       - hostname: heroaero.dev 
         service: http://homepage-svc.test-dev.svc.cluster.local
       - hostname: pgadmin.heroaero.dev
-        service: http://pgadmin.test-dev.svc.cluster.local
+        service: http://traefik.kube-system.svc.cluster:80
       - hostname: graf.heroaero.dev
         service: http://kube-prometheus-stack-grafana.monitoring.svc.cluster.local
       - hostname: longhorn.heroaero.dev
