--- a/infrastructure/base/cloudflared/deployment.yaml
+++ b/infrastructure/base/cloudflared/deployment.yaml
@@ -64,11 +64,11 @@ data:
   config.yaml: |
     ingress:
       - hostname: link.heroaero.dev 
-        service: http://traefik.kube-system.svc.cluster:80
+        service: http://traefik.kube-system.svc.cluster.local:80
       - hostname: heroaero.dev 
         service: http://homepage-svc.test-dev.svc.cluster.local
       - hostname: pgadmin.heroaero.dev
-        service: http://traefik.kube-system.svc.cluster:80
+        service: http://traefik.kube-system.svc.cluster.local:80
       - hostname: graf.heroaero.dev
         service: http://kube-prometheus-stack-grafana.monitoring.svc.cluster.local
       - hostname: longhorn.heroaero.dev
