--- a/infrastructure/base/stakater-reloader/helm-repo.yaml
+++ b/infrastructure/base/stakater-reloader/helm-repo.yaml
@@ -2,6 +2,7 @@ apiVersion: source.toolkit.fluxcd.io/v1
 kind: HelmRepository
 metadata:
   name: stakater
+  namespace: flux-system
 spec:
   interval: 30m 
   url: https://stakater.github.io/stakater-charts
