--- a/infrastructure/base/ci-access/ci-kubeconfig-sa.yaml
+++ b/infrastructure/base/ci-access/ci-kubeconfig-sa.yaml
@@ -7,11 +7,11 @@ metadata:
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRoleBinding
 metadata:
-  name: ci-access-readonly
+  name: ci-access-edit
 roleRef:
   apiGroup: rbac.authorization.k8s.io
   kind: ClusterRole
-  name: view
+  name: edit
 subjects:
   - kind: ServiceAccount
     name: ci-access
