fix(RBAC):making a custom clusterrole so flux-diff can patch,get,list,watch

--- a/infrastructure/base/ci-access/ci-kubeconfig-sa.yaml
+++ b/infrastructure/base/ci-access/ci-kubeconfig-sa.yaml
@@ -1,18 +1,28 @@
-apiVersion: v1
-kind: ServiceAccount
+
+apiVersion: rbac.authorization.k8s.io/v1
+kind: ClusterRole
 metadata:
-  name: ci-access
-  namespace: kube-system
+  name: ci-access-dryrun
+rules:
+- apiGroups: [""]
+  resources: ["namespaces"]
+  verbs: ["get", "list", "watch", "patch"]
+- apiGroups: ["apiextensions.k8s.io"]
+  resources: ["customresourcedefinitions"]
+  verbs: ["get", "list", "watch", "patch"]
+- apiGroups: ["rbac.authorization.k8s.io"]
+  resources: ["clusterrolebindings"]
+  verbs: ["get", "list", "watch", "patch"]
 ---
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRoleBinding
 metadata:
-  name: ci-access-edit
+  name: ci-access-dryrun
 roleRef:
   apiGroup: rbac.authorization.k8s.io
   kind: ClusterRole
-  name: edit
+  name: ci-access-dryrun
 subjects:
-  - kind: ServiceAccount
-    name: ci-access
-    namespace: kube-system
+- kind: ServiceAccount
+  name: ci-access
+  namespace: kube-system
