--- a/infrastructure/staging/ci-access/ci-access-secret.yaml
+++ b/infrastructure/staging/ci-access/ci-access-secret.yaml
@@ -2,6 +2,7 @@ apiVersion: v1
 kind: Secret
 metadata:
   name: ci-access-token
+  namespace: kube-system
   annotations:
     kubernetes.io/service-account.name: ci-access
 type: kubernetes.io/service-account-token
