--- a/infrastructure/base/ci-access/ci-kubeconfig-sa.yaml
+++ b/infrastructure/base/ci-access/ci-kubeconfig-sa.yaml
@@ -1,11 +1,17 @@
 
+apiVersion: v1
+kind: ServiceAccount
+metadata:
+  name: ci-access
+  namespace: kube-system
+---
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRole
 metadata:
   name: ci-access-dryrun
 rules:
 - apiGroups: [""]
-  resources: ["namespaces"]
+  resources: ["namespaces", "nodes"]
   verbs: ["get", "list", "watch", "patch"]
 - apiGroups: ["apiextensions.k8s.io"]
   resources: ["customresourcedefinitions"]
