--- a/apps/staging/linkding/ingress.yaml
+++ b/apps/staging/linkding/ingress.yaml
@@ -8,6 +8,10 @@ metadata:
     nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
 spec:
   ingressClassName: traefik
+  tls:
+    - hosts:
+      - link.heroaero.dev 
+      secretName: linkding-tls 
   rules:
     - host: link.heroaero.dev
       http:
