commenting out cloudflared to test out local dns connections

--- a/infrastructure/staging/cloudflared/kustomization.yaml
+++ b/infrastructure/staging/cloudflared/kustomization.yaml
@@ -3,4 +3,4 @@ kind: Kustomization
 namespace: cloudflared
 resources:
   - external-secret.yaml
-  - ../../base/cloudflared
+  # - ../../base/cloudflared
