test(.com) trying .com for ingress host so i can reach my services via http

--- a/apps/staging/pgadmin/ingress.yaml
+++ b/apps/staging/pgadmin/ingress.yaml
@@ -5,7 +5,7 @@ metadata:
 spec:
   ingressClassName: traefik
   rules:
-    - host: pgadmin.heroaero.dev
+    - host: pgadmin.heroaero.com
       http:
         paths:
           - backend:
