--- a/infrastructure/base/cert-manager/helmrelease.yaml
+++ b/infrastructure/base/cert-manager/helmrelease.yaml
@@ -1,4 +1,3 @@
----
 apiVersion: helm.toolkit.fluxcd.io/v2
 kind: HelmRelease
 metadata:
@@ -14,3 +13,5 @@ spec:
         name: cert-manager
       version: v1.18.1
   interval: 1m0s
+  values:
+    installCRDs: true
