feat(ingress)added ingress via helm values for grafana

--- a/monitoring/controllers/base/kube-prometheus-stack/release.yaml
+++ b/monitoring/controllers/base/kube-prometheus-stack/release.yaml
@@ -29,3 +29,14 @@ spec:
   values:
     grafana:
       adminPassword: aero
+      ingress:
+        enabled: true
+        ingressClassName: traefik
+        hosts:
+          - graf.heroaero.com
+        ## Secret must be manually created in the namespace
+        ##
+        tls: []
+        # - secretName: grafana-general-tls
+        #   hosts:
+        #   - grafana.example.com
