feat(domain):using .info domain for grafana ingress

--- a/monitoring/controllers/base/kube-prometheus-stack/release.yaml
+++ b/monitoring/controllers/base/kube-prometheus-stack/release.yaml
@@ -33,10 +33,10 @@ spec:
         enabled: true
         ingressClassName: traefik
         hosts:
-          - graf.heroaero.com
+          - graf.heroaero.info
         ## Secret must be manually created in the namespace
         ##
         tls:
          - secretName: grafana-tls-secret
            hosts:
-           - graf.heroaero.com
+           - graf.heroaero.info
