--- a/infrastructure/base/cloudflared/deployment.yaml
+++ b/infrastructure/base/cloudflared/deployment.yaml
@@ -63,14 +63,14 @@ metadata:
 data:
   config.yaml: |
     ingress:
-      - hostname: link.heroaero.dev 
+      - hostname: link.heroaero.net
         service: http://traefik.kube-system.svc.cluster.local:80
       - hostname: heroaero.dev 
         service: http://homepage-svc.test-dev.svc.cluster.local
-      - hostname: pgadmin.heroaero.dev
+      - hostname: pgadmin.heroaero.net
         service: http://traefik.kube-system.svc.cluster.local:80
-      - hostname: graf.heroaero.dev
-        service: http://kube-prometheus-stack-grafana.monitoring.svc.cluster.local
-      - hostname: longhorn.heroaero.dev
+      - hostname: graf.heroaero.info
+        service: http://traefik.kube-system.svc.cluster.local:80
+      - hostname: longhorn.heroaero.net
         service: http://longhorn-frontend.longhorn-system.svc.cluster.local
       - service: http_status:404
