--- a/clusters/staging/games.yaml
+++ b/clusters/staging/games.yaml
@@ -13,7 +13,7 @@ spec:
     kind: GitRepository
     name: flux-system 
   path: ./games/staging
-    #prune: true
+  prune: true
     #decryption:
   # provider: sops
     #secretRef:
