--- a/games/base/minecraft/helm-release.yaml
+++ b/games/base/minecraft/helm-release.yaml
@@ -10,7 +10,8 @@ spec:
       reconcileStrategy: ChartVersion
       sourceRef:
         kind: HelmRepository
-        name: flux-system
+        name: minecraft
+        namespace: flux-system
       version: v1.9.0
   interval: 1m0s
   values:
