--- a/clusters/staging/infrastructure.yaml
+++ b/clusters/staging/infrastructure.yaml
@@ -12,6 +12,9 @@ spec:
   sourceRef:
     kind: GitRepository
     name: flux-system 
-  path: ./infrastructure/staging
+  path: ./infrastructure/controllers/staging
   prune: true
-
+  decryption:
+    provider: sops
+    secretRef:
+      name: sops-age
