--- a/infrastructure/controllers/base/renovate/cronjob.yaml
+++ b/infrastructure/controllers/base/renovate/cronjob.yaml
@@ -18,7 +18,7 @@ spec:
 
               envFrom:
                 - secretRef:
-                    name: renovate-container-env
+                    name: renovate
                 - configMapRef:
                     name: renovate-configmap
 
