--- a/renovate.json
+++ b/renovate.json
@@ -1,23 +1,5 @@
 {
-  "$schema": "https://docs.renovatebot.com/renovate-schema.json",
-  "extends": ["config:base"],
-  "enabledManagers": ["kubernetes", "helm-values", "kustomize"],
   "kubernetes": {
-    "fileMatch": ["\\.ya?ml$"]
-  },
-  "helm-values": {
-    "fileMatch": ["values\\.ya?ml$"]
-  },
-  "kustomize": {
-    "fileMatch": ["kustomization\\.ya?ml$"]
-  },
-  "regexManagers": [],
-  "logLevel": "debug",
-  "packageRules": [
-    {
-      "matchDatasources": ["docker"],
-      "enabled": true
-    }
-  ]
+    "managerFilePatterns": ["/\\.yaml$/"]
+  }
 }
-
