fix(helm-release)

--- a/monitoring/controllers/base/rancher/helm-release.yaml
+++ b/monitoring/controllers/base/rancher/helm-release.yaml
@@ -18,16 +18,16 @@ spec:
     replicaCount: 2
     hostname: ranch.heroaero.net
     ingress:
-    enabled: true
-    ingressClassName: traefik
-    pathType: ImplementationSpecific
-    path: "/"
-    servicePort: 80
+      enabled: true
+      ingressClassName: traefik
+      pathType: ImplementationSpecific
+      path: "/"
+      servicePort: 80
 
-    extraAnnotations:
-      cert-manager.io/cluster-issuer: letsencrypt-prod
-      nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
+      extraAnnotations:
+        cert-manager.io/cluster-issuer: letsencrypt-prod
+        nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
 
-    tls:
-      source: secret
-      secretName: tls-rancher-ingress
+      tls:
+        source: letsEncrypt
+        secretName: tls-rancher-ingress
