--- a/monitoring/controllers/base/rancher/helm-release.yaml
+++ b/monitoring/controllers/base/rancher/helm-release.yaml
@@ -29,5 +29,5 @@ spec:
         nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
 
       tls:
-        source: letsEncrypt
+        source: secret
         secretName: tls-rancher-ingress
