feat(cloudflared):adding rancher to cloudflared tunnel

--- a/infrastructure/controllers/base/cloudflared/deployment.yaml
+++ b/infrastructure/controllers/base/cloudflared/deployment.yaml
@@ -67,6 +67,8 @@ data:
         service: http://traefik.kube-system.svc.cluster.local:80
       - hostname: heroaero.dev 
         service: http://homepage-svc.test-dev.svc.cluster.local
+      - hostname: ranch.heroaero.net
+        service: http://traefik.kube-system.svc.cluster.local:80
       - hostname: pgadmin.heroaero.net
         service: http://traefik.kube-system.svc.cluster.local:80
       - hostname: graf.heroaero.info
